# arxiv-research-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
arxiv-paper-curator-manual/: README.md  gradio_launcher.py  pyproject.toml
arxiv-paper-curator-manual/scripts/: ingest_arxiv.py  test_arxiv_client.py
arxiv-paper-curator-manual/scripts/indexing/: chunk_papers.py
arxiv-paper-curator-manual/scripts/opensearch/: index_embeddings.py
arxiv-paper-curator-manual/src/: dependencies.py
arxiv-paper-curator-manual/src/errors/: __init__.py
arxiv-paper-curator-manual/src/models/: feedback.py  paper.py  paper_chunk.py
arxiv-paper-curator-manual/src/routers/: feedback.py  health.py  papers.py
arxiv-paper-curator-manual/src/schemas/: __init__.py  search.py
arxiv-paper-curator-manual/src/services/cache/: factory.py  redis_client.py
arxiv-paper-curator-manual/src/services/embeddings/: jina_client.py
arxiv-paper-curator-manual/src/services/indexing/: text_chunker.py
arxiv-paper-curator-manual/src/services/langfuse/: factory.py
arxiv-paper-curator-manual/src/services/ollama/: client.py
arxiv-paper-curator-manual/src/services/opensearch/: client.py  query_builder.py
arxiv-paper-curator-manual/tests/: conftest.py
arxiv-paper-curator-manual/tests/api/: test_agentic_ask.py  test_ask.py  test_feedback.py  test_health.py  test_ingestion_stages.py  test_papers.py  test_search.py
arxiv-paper-curator-manual/tests/unit/: test_agent_nodes.py  test_arxiv_client.py  test_cache.py  test_config.py  test_jina_client.py
docs/: runbook.md  (+1 more)
(+67 files in other folders)
